<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeDum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Day">Day</string>
    <string name="List">List</string>
    <string name="Month">Month</string>
    <string name="New">New Event</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">FreeDUM</string>
    <string name="title_activity_new_event">New FreeDUM</string>
    <string name="title_activity_month">Month</string>
    <string name="title_activity_list">List</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_forgot">Forgot Your Password?</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">Not a member?\nClick here to sign up!!!</string>
    <string name="new_event_button">NEW</string>
    <string name="month_view_button">Month</string>
    <string name="list_view_button">LIST</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="signup_done_button">Done</string>
    <string name="logout_button">LOGOUT</string>
    <string name="cancel_button">X  Cancel</string>
    <string name="save_button">√   Save</string>
    <string name="compare_button">√   Compare</string>
    <string name="event_name">Event Name</string>
    <string name="from_help">FROM</string>
    <string name="date_hint">Date</string>
    <string name="to_help">TO</string>
    <string name="time_hint">Time</string>
    <string name="new_friend_button">Add Friend</string>
    <string name="new_friend_search">Search</string>
    <string name="new_friend_results_hint">Results</string>
    <string name="compare_friend">Compare Freedum</string>
    <string name="select_friend">Select a friend from below</string>

</resources>
