<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewEventActivity" >

    <Button
        android:id="@+id/newSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/newCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newSaveButton"
        android:layout_alignBottom="@+id/newSaveButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:text="@string/cancel_button"
        android:onClick="cancel" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newSaveButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" >

        <LinearLayout
            android:id="@+id/newEventForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/newEventName"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_name"
                android:singleLine="true" />

            <TextView
                android:id="@+id/newEventFromHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_help"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/newEventFromDate"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date_hint"
                android:onClick="showDatePicker" />

            <EditText
                android:id="@+id/newEventFromTime"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time_hint"
                android:onClick="showTimePicker" />

            <TextView
                android:id="@+id/newEventToHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_help"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/newEventToDate"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date_hint"
                android:onClick="showDatePicker" />

            <EditText
                android:id="@+id/newEventToTime"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time_hint"
                android:onClick="showTimePicker" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>